tests/ui/runtime-ingress-evidence-private.rs
use hibana::runtime::transport::IngressEvidence;

fn main() {
    let _ = core::mem::size_of::<IngressEvidence>();
}
